[gd_scene load_steps=13 format=2]

[ext_resource path="res://monogram_extended.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/GameOverScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/PauseScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://MonogramMedium.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/PauseScreen.gd" type="Script" id=5]
[ext_resource path="res://scripts/GameOverScreen.gd" type="Script" id=6]
[ext_resource path="res://scripts/UIElementHeartContainer.gd" type="Script" id=7]
[ext_resource path="res://textures/LBIcon.png" type="Texture" id=8]
[ext_resource path="res://sounds/Music/Loathe.ogg" type="AudioStream" id=9]
[ext_resource path="res://textures/Inputs.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("FullScreen/HitMarker:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.0627451, 0.0196078, 0 ), Color( 1, 0.0627451, 0.0196078, 0.25098 ), Color( 1, 0.0627451, 0.0196078, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FullScreen/Margin/UIElementHPBar:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 200, 64 ), Vector2( 260, 84 ), Vector2( 200, 64 ) ]
}

[node name="UI" type="CanvasLayer"]

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0
autoplay = true
bus = "Music"

[node name="FullScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="Control" parent="FullScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIElementHPBar" type="HBoxContainer" parent="FullScreen/Margin"]
margin_right = 200.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inputs" type="TextureRect" parent="FullScreen/Margin"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -256.0
margin_top = -65.0
rect_min_size = Vector2( 256, 65 )
texture = ExtResource( 10 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="FullScreen/Margin"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -64.0
margin_right = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LBIcon" type="TextureRect" parent="FullScreen/Margin/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 8 )
stretch_mode = 5

[node name="toLockAndAim" type="Label" parent="FullScreen/Margin/HBoxContainer"]
margin_left = 68.0
margin_top = 19.0
margin_right = 248.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 4 )
text = "to lock and aim"

[node name="Indicators" type="VBoxContainer" parent="FullScreen/Margin"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_bottom = 40.0
grow_horizontal = 0
size_flags_horizontal = 13
custom_constants/separation = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="FullScreen/Margin/Indicators"]
margin_right = 96.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "0 "
align = 2

[node name="Tween" type="Tween" parent="FullScreen/Margin/Indicators/Score"]

[node name="Combo" type="RichTextLabel" parent="FullScreen/Margin/Indicators"]
margin_top = 42.0
margin_right = 96.0
margin_bottom = 85.1
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 43.1 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[right][color=red]1x[/color][/right]"
text = "1x"
scroll_active = false

[node name="HitMarker" type="ColorRect" parent="FullScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.0627451, 0.0196078, 0 )

[node name="PauseScreen" type="Control" parent="FullScreen" instance=ExtResource( 3 )]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverScreen" type="Control" parent="FullScreen" instance=ExtResource( 2 )]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIAnimations" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/hit = SubResource( 2 )
